Kubernet/KubernetWithPiyush/Day48-migrate-ingress-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web-app
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web-service
