Kubernet/KubernetWithPiyush/Day48-migrate-ingress-gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: web-app
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "web.example.com"
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "web.example.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: web-tls-secret
